<resources>
    <string name="app_name">Ustudy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_func1">Func1</string>
    <string name="title_activity_func2">Func2</string>
    <string name="title_activity_func3">Func3</string>
    <string name="title_activity_func4">Func4</string>

    <string name="ac_btn">AC</string>
    <string name="c_btn">C</string>
    <string name="sqrt_btn">\u221a</string>
    <string name="dot_btn">.</string>
    <string name="equal_btn">=</string>
    <string name="plus_btn">+</string>
    <string name="minus_btn">-</string>
    <string name="multiply_btn">x</string>
    <string name="divide_btn">/</string>
    <string name="sin_btn">sin</string>
    <string name="cos_btn">cos</string>
    <string name="tan_btn">tan</string>
    <string name="zero_btn">0</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>

    <string name="login_label_username">username</string>
    <string name="login_label_password">password</string>
    <string name="login_label_signin">login</string>
    <string name="login_label_register">register</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="register_username">username</string>
    <string name="register_password">password</string>
    <string name="register_password2">confirm password</string>
    <string name="confirm">wrong password,please input again</string>
    <string name="register">register</string>
    <string name="update">update</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_encrypt">Encrypt</string>
</resources>
